AG-2771 - fixed focused cells not showing bottom border within floating top/bottom

--- a/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
+++ b/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
@@ -1278,17 +1278,18 @@
     }
 
     .ag-floating-top {
-        background-color: $row-floating-background-color;
         border-bottom: 1px solid $border-color;
+    }
+    .ag-floating-bottom {
+        border-top: 1px solid $border-color;
+    }
+
+    .ag-floating-top, .ag-floating-bottom {
+        background-color: $row-floating-background-color;
 
         .ag-row {
             background-color: $row-floating-background-color;
         }
-    }
-
-    .ag-floating-bottom {
-        background-color: $row-floating-background-color;
-        border-top: 1px solid $border-color;
     }
 
     ////////////////////////////////////////
